src/home/adoptableCarousel.scss
.adoptable {
  .slick-slide {
    display: flex;
    align-items: center;
    justify-content: center;

    a {
      display: flex;
      align-items: center;
      justify-content: center;
      position: relative;

      > img {
        height: 350px;
        max-width: 100%;
      }

      > div.adoptable-info-overlay {
        position: absolute;
        height: 0;
        width: 100%;
        bottom: 0;
        background: white;
        opacity: 0.6;
        overflow: hidden;
        text-align: center;
        -webkit-transition: all 0.5s ease;
        transition: all 0.5s ease;
      }
    }

    a:hover {
      > div.adoptable-info-overlay {
        height: 50%;

        .adoptable-info {
          padding: 1em;

        }
      }
    }

    img {
      border: none;
    }
  }
}

